volexc/tests/ui/parse_struct_missing_semicolon_recovery.out
Error: found 'y' expected ';'
   ╭─[ parse_struct_missing_semicolon_recovery.vol:4:5 ]
   │
 4 │     y: f32;
   │     ┬  
   │     ╰── Unexpected 'y'
   │ 
   │ Note: Expected one of: ';'
───╯